--- a/10-2.html
+++ b/10-2.html
@@ -3,20 +3,20 @@
 <head>
 	<meta charset="utf-8" />
 	<title> RPG sample </title>
-	<link rel="stylesheet" href="../libs/pig2d/css/core.css" />
+	<link rel="stylesheet" href="./../libs/pig2d/css/core.css" />
 
 	<!--제이쿼리가 종속성 관계에서 가장 높은 위치이다 그래서 맨먼저 쓴다-->
-	<script src="../libs/jquery-2.0.3.min.js"></script>
+	<script src="./../libs/jquery-2.0.3.min.js"></script>
 
 	<!--백본은 제이쿼리 다음에 포함시키는것이 건강에 이롭다 -->
-	<script src="../libs/backbone/underscore-min.js"></script>
-	<script src="../libs/backbone/backbone-min.js"></script>
+	<script src="./../libs/backbone/underscore-min.js"></script>
+	<script src="./../libs/backbone/backbone-min.js"></script>
 
 	<!--pig2d 엔진은 제이쿼리와 백본에 종속적이므로 맨 나중에 쓴다-->
-	<script src="../libs/pig2d/js/core.js"></script>
-	<script src="../libs/pig2d/js/node2d.js"></script>
-	<script src="../libs/pig2d/js/system.js"></script>
-	<script src="../libs/pig2d/js/controller.js"></script>
+	<script src="./../libs/pig2d/js/core.js"></script>
+	<script src="./../libs/pig2d/js/node2d.js"></script>
+	<script src="./../libs/pig2d/js/system.js"></script>
+	<script src="./../libs/pig2d/js/controller.js"></script>
 
 </head>
 <body>
@@ -121,7 +121,7 @@
 
 	Pig2d.util.SetupAsset({
 		asset_path : "./",
-		img_files : ['../res/fighter.png'],
+		img_files : ['./../res/fighter.png'],
 		OnLoadComplete : main
 	});
 </script>
